filter form out of p tag

--- a/templates/create.html
+++ b/templates/create.html
@@ -41,7 +41,7 @@
                     Filtre
                 </div>
                 <div class="card-body">
-                    <p>{{ filter_form|crispy }}</p>
+                    {{ filter_form|crispy }}
                 </div>
             </div>
         </div>
