--- a/templates/list.html
+++ b/templates/list.html
@@ -38,7 +38,7 @@
                     Filtre
                 </div>
                 <div class="card-body">
-                    <p>{{ filter_form|crispy }}</p>
+                    {{ filter_form|crispy }}
                 </div>
             </div>
         </div>
