--- a/templates/change.html
+++ b/templates/change.html
@@ -20,9 +20,9 @@
         </div>
         <div class="col text-end">
             {% for btn in model.conf.change.action %}
-                {% if btn.method == 'GET' %}
+                {% if btn.method == 'GET' and request|stack:obj|eval:btn.condition %}
                     <a href="{{ btn.href }}?pk={{ obj.id }}" class="{{ btn.class }}">{{ btn.title }}</a>
-                {% elif btn.method == 'POST' %}
+                {% elif btn.method == 'POST' and request|stack:obj|eval:btn.condition %}
                     <form action="{{ btn.href }}?pk={{ obj.id }}" method="{{ btn.method }}" style="display: initial">
                         {% csrf_token %}
                         {% for key, value in btn.values.items %}<input type="hidden" name="{{ key }}" value="{{ value }}">{% endfor %}
@@ -35,29 +35,10 @@
     </div>
 
     <div class="row mt-4">
-        {% if filter_form and not inlines %}
         <div class="col-2">
-            <div class="card">
-                <div class="card-header">
-                    Filtre
-                </div>
-                <div class="card-body">
-                    {{ filter_form|crispy }}
-                </div>
-            </div>
+            {% include 'widgets/description_card.html' %}
+            {% include 'widgets/approvers_card.html' %}
         </div>
-        {% elif model.conf.description and not inlines %}
-        <div class="col-2">
-            <div class="card">
-                <div class="card-header">
-                    Description
-                </div>
-                <div class="card-body">
-                    <p class="p-3 pb-2">{{ model.conf.description }}</p>
-                </div>
-            </div>
-        </div>
-        {% endif %}
 
 
         <form class="col" method="post" id="form-{{ model|getattr:'_meta'|getattr:'model_name' }}" enctype="multipart/form-data">
