--- a/templates/create.html
+++ b/templates/create.html
@@ -36,25 +36,13 @@
     <div class="row mt-4">
         {% if filter_form and not inlines %}
         <div class="col-2">
-            <div class="card">
-                <div class="card-header">
-                    Filtre
-                </div>
-                <div class="card-body">
-                    {{ filter_form|crispy }}
-                </div>
-            </div>
+            {% include 'widgets/filter_card.html' %}
+            {% include 'widgets/approvers_card.html' %}
         </div>
         {% elif model.conf.description and not inlines %}
         <div class="col-2">
-            <div class="card">
-                <div class="card-header">
-                    Description
-                </div>
-                <div class="card-body">
-                    <p class="p-3 pb-2">{{ model.conf.description }}</p>
-                </div>
-            </div>
+            {% include 'widgets/description_card.html' %}
+            {% include 'widgets/approvers_card.html' %}
         </div>
         {% endif %}
 
