--- a/templates/list.html
+++ b/templates/list.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="row mt-4">
-        {% if filter_form and filter_form|length > 1 %}
+        {% if filter_form and filter_form.fields|length > 1 %}
         <div class="col-2">
             <div class="card">
                 <div class="card-header">Filtre</div>
