--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,12 @@
 <!-- Add the evo-calendar.js for.. obviously, functionality! -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/evo-calendar@1.1.2/evo-calendar/js/evo-calendar.min.js"></script>
+
+<style>
+    .event-empty{
+        border-radius: 5px !important;
+    }
+</style>
 {% endblock %}
 
 {% block content %}
@@ -35,34 +41,21 @@
     </div>
 </div>
 
-{{ event|json_script:"py_dict" }}
+{{ leaves|json_script:"leaves" }}
+{{ birthdays|json_script:"birthdays" }}
 
 <script>
 var today = new Date();
+var events = JSON.parse(document.getElementById('leaves').textContent);
+events = events.concat(JSON.parse(document.getElementById('birthdays').textContent));
+console.log(events);
+
 $(document).ready(function() {
     $("#calendar").evoCalendar({
         'language': 'en',
-        format: "MM dd, yyyy",
+        format: "yyyy-mm-dd",
         titleFormat: "MM",
-        calendarEvents: [{
-            id: "d8jai7s",
-            name: "Author's Birthday",
-            description: "Author's note: Thank you for using EvoCalendar! :)",
-            date: "April/15/2023",
-            type: "birthday",
-            everyYear: !0
-        }, {
-            id: "in8bha4",
-            name: "Holiday #2",
-            description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
-            date: today,
-            type: "holiday"
-        }, {
-            id: "in8bha4",
-            name: "Event #2",
-            date: today,
-            type: "event"
-        }]
+        calendarEvents: events
     });
 });
 </script>
