--- a/templates/list.html
+++ b/templates/list.html
@@ -64,7 +64,7 @@
                         <thead>
                             <tr>
                                 {% for field in model.conf.list.display %}
-                                    <th>{{ field.1 }}</th>
+                                    <th class="fw-bolder">{{ field.1 }}</th>
                                 {% endfor %}
                             </tr>
                         </thead>
