--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load static %}
-{% load crispy_forms_tags %}
+{% load crispy_forms_filters %}
 {% get_current_language as LANGUAGE_CODE %}
 
 
@@ -10,10 +10,26 @@
         <link rel="icon"href="{% static 'favicon.ico' %}">
         <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>People | Login</title>
+        <title>{% block title %}Somba | Bralima{% endblock title %}</title>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <meta name="description" content="{% block description %}LMC Services{% endblock description %}">
+        <style>
+            .text-bg-primary{
+                background-image: linear-gradient(329deg, #000000 10%, #111111 50%, #132378 100%) !important;
+            }
+        .bg {
+            background-image: url("");
+            background-position: bottom;
+            background-repeat: no-repeat;
+            position: absolute;
+            opacity: 0.1;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            top: 20%;
+        }
+    </style>
     </head>
 
     <body class="text-bg-primary">
@@ -24,7 +40,8 @@
                 <div class="col-6" style="margin-top: 2rem;">
                     <div class="card text-bg-light">
                         <div class="card-header">
-                            <h4>{% translate "Login" %}</h4>
+                            <i data-feather="users" style="width: 64px; height: 64px"></i>
+                            <h3>People</h3>
                         </div>
                         <div class="card-body">
                             {% if messages %}
@@ -39,9 +56,8 @@
                             <form method="POST">
                                 {% csrf_token %}
                                 {{ form|crispy }}
-
-                                <div class="d-grid gap-2 mt-4">
-                                  <button type="submit" class="col btn btn-success">{% translate "Login" %}</button>
+                                <div class="d-grid gap-2">
+                                    <button type="submit" class="col btn btn-success btn-sm">{% translate "Login" %}</button>
                                 </div>
                             </form>
                         </div>
@@ -52,4 +68,14 @@
         </div>
         </div>
     </body>
+    <script src="{% static 'js/feather-icons.js' %}"></script>
+    <script>
+        feather.replace();
+        document.addEventListener("DOMContentLoaded", function() {
+            var elements = document.querySelectorAll(".form-control");
+            elements.forEach((element) => {
+              element.classList.add('form-control-sm');
+            })
+        });
+    </script>
 </html>
