reinit on new based user

--- a/templates/list.html
+++ b/templates/list.html
@@ -76,8 +76,8 @@
                             {% empty %}
                             <tr>
                                 <td colspan="{{ model.conf.list.display|length }}" class="text-center">
-                                    <i data-feather="{{ model.conf.icon }}"></i>
-                                    <h3 class="m-0">No {{ model|getattr:'_meta'|getattr:'verbose_name' }} found</h3>
+                                    <i data-feather="{{ model.conf.icon }}" class="mt-3"></i>
+                                    <h3 class="m-0 mb-3">No {{ model|getattr:'_meta'|getattr:'verbose_name' }} found</h3>
                                 </td>
                             </tr>
                             {% endfor %}
