--- a/templates/list.html
+++ b/templates/list.html
@@ -84,6 +84,37 @@
                         </tbody>
                     </table>
                 </div>
+                {% if qs.has_other_pages %}
+                <div class="card-footer text-center">
+                    <nav aria-label="Page navigation example">
+                      <ul class="pagination justify-content-center m-0">
+                          {% if qs.has_previous %}
+                            <li class="page-item">
+                              <a href="?page={{ qs.previous_page_number }}" class="page-link">Previous</a>
+                            </li>
+                          {% else %}
+                              <li class="page-item disabled"><a class="page-link">Previous</a></li>
+                          {% endif %}
+
+                          {% for i in qs.paginator.page_range %}
+                              {% if qs.number == i %}
+                                <li class="page-item active"><a href="?page={{ i }}" class="page-link">{{ i }}</a></li>
+                              {% else %}
+                                <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                              {% endif %}
+                          {% endfor %}
+
+                          {% if qs.has_next %}
+                            <li class="page-item">
+                              <a href="?page={{ qs.next_page_number }}" class="page-link">Next</a>
+                            </li>
+                          {% else %}
+                              <li class="page-item disabled"><a class="page-link">Next</a></li>
+                          {% endif %}
+                      </ul>
+                    </nav>
+                </div>
+                {% endif %}
             </div>
         </div>
     </div>
