--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -57,7 +57,7 @@
                                 {% csrf_token %}
                                 {{ form|crispy }}
                                 <div class="d-grid gap-2">
-                                    <button type="submit" class="col btn btn-success btn-sm">{% translate "Login" %}</button>
+                                    <button type="submit" class="col btn btn-success">{% translate "Login" %}</button>
                                 </div>
                             </form>
                         </div>
