--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
             <div class="dropdown">
               <a class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                 <i data-feather="user" class="text-light"></i>
-                  {{ request.user.employee.full_name|default:request.user.username }}
+                  &nbsp;{{ request.user.employee.full_name|default:request.user.username }}
               </a>
               <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
                 <li><a class="dropdown-item" href="{% url 'password_change' %}">Update password</a></li>
