--- a/templates/list.html
+++ b/templates/list.html
@@ -36,7 +36,10 @@
             <div class="card">
                 <div class="card-header">Filtre</div>
                 <div class="card-body">
-                    {{ filter_form|crispy }}
+                    <form method="get">
+                        {{ filter_form|crispy }}
+                        <button type="submit" class="btn btn-success">Soumettre</button>
+                    </form>
                 </div>
             </div>
         </div>
